feat:1、添加符合DZB规范的数据格式，从DZB到shapefile；2、将DLHJ版本从DLHJ_INSTALL_DIRECTORY_PREFIX_V_2_02_11提升到DLHJ_INSTALL_DIRECTORY_PREFIX_V_2_03_00

--- a/src/plugins/plugin_vector_odata2shapefile_toolbox/plugin_vector_odata2shapefile.qrc
+++ b/src/plugins/plugin_vector_odata2shapefile_toolbox/plugin_vector_odata2shapefile.qrc
@@ -3,5 +3,6 @@
     <file>icons/plugin_icon.svg</file>
 		<file>icons/JBDX2Shapefile_icon.svg</file>
     <file>icons/DZB2Shapefile_icon.svg</file>
+    <file>icons/DZB2ShapefileWithSpecification_icon.svg</file>
   </qresource>
 </RCC>
