feat:1、修改启动界面和默认项目名称；2、因为触及Windows 传统路径长度上限（MAX_PATH≈260），因此对vector_data_tile_customization_toolbox、vector_data_consistency_processing_toolbox两个插件先不进行编译
可以启用 Windows Long Paths，但需要注意的是就算系统开启了，moc.exe/CMake/MSBuild 是否“长路径感知（longPathAware）”也很关键；很多旧工具链仍然会在 260 附近失败。所以这条不如“缩短路径”可靠。

--- a/images/images.qrc
+++ b/images/images.qrc
@@ -77,6 +77,7 @@
         <file>north_arrows/gpsarrow2.svg</file>
         <file>splash/splash.png</file>
         <file>splash/DLHJ_splash.png</file>
+        <file>splash/LSL.png</file>
         <file>composer/missing_image.png</file>
         <file>composer/missing_image.svg</file>
         <file>themes/default/checks/SliverOrGap.svg</file>
